--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
-/*  your css code here. If applicable */
+body {
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.header {
+    background-color: #011e29;
+    text-align: center;
+    padding: 20px;
+    color: white;
+}
+
+.latest-news-section {
+    background-color: #011e29;
+    text-align: center;
+    padding: 20px;
+    width: 80%;
+    margin: 20px auto;
+    border-radius: 7px;
+    color: white;
+}
+
+.pictorial-news-section {
+    background-color: #f5f5f5;
+    padding: 20px;
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 7px;
+}
+
+.pictorial-news-section img {
+    width: 200px;
+    margin: 10px;
+}
